# sfmt-dist

./: .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  libtool
include/: Makefile.am  Makefile.in
include/sfmt-dist/: KISS.hpp  Ziggurat.hpp  aligned_alloc.h  cpu_feature.h  dSFMT19937.h  dSFMTAVX19937.h  dSFMTAVX607.h  mt19937.h  mt19937_64.h  normalFromDouble.hpp  sfmt19937.h  uniformIntFromDouble.hpp  version.h  ziggurat1.h
m4/: m4_ax_ext.m4
src/: Makefile.am  Makefile.in  aligned_alloc.cpp  config.h  config.h.in  cpu_feature.cpp  cpu_feature_main.cpp  dSFMT19937.cpp  dSFMTAVX.hpp  dSFMTAVX19937.cpp  dSFMTAVX607.cpp  debug.h  dsfmt_avx.cpp  dsfmt_avx.h  dsfmt_avx_19937.cpp  dsfmt_avx_common.h  dsfmt_avx_params.h  dsfmt_avx_xxx.h  getopt.hpp  makeTable.cpp  mt19937.cpp  mt19937_64.cpp  output.cpp  sfmt-dist.h  sfmt19937.cpp  sfmt_common.cpp  sfmt_common.h  speed.cpp  test_dsfmt19937.cpp  test_dsfmtavx19937.cpp  test_dsfmtavx607.cpp  test_mt19937.cpp  test_mt19937_64.cpp  test_sfmt19937.cpp  test_version.cpp  version.cpp  w128.h  w256.h  ziggurat1.cpp
